# ctrlsys

./: .gitignore  CMakeLists.txt  README.rst
cheatsheet/: CMakeLists.txt  main.tex
cheatsheet/sty/: integralTable.sty  laplaceTable.sty  pagesettings.sty
cheatsheet/tex/: cheatsheet.tex  integralTable.tex  laplaceTable.tex
cmake/: LaTeXBuild.cmake
hw1/: CMakeLists.txt
hw2/: CMakeLists.txt  main.tex
hw2/tex/: hw.tex
hw3/: CMakeLists.txt  main.tex
hw3/src/: prob8.m
hw3/sty/: labreport.sty
hw3/tex/: hw.tex
hw4/: CMakeLists.txt  main.tex
hw4/tex/: hw4.tex
hw4/tikz/: prob1a1.tex  prob1a2.tex  prob1a3.tex
hw5/: CMakeLists.txt  main.tex
hw5/tikz/: prob4b.tex
hw6/: CMakeLists.txt  main.tex
hw6/tex/: hw5.tex
hw6/tikz/: prob3.tex
lab1/: CMakeLists.txt  main.tex
lab1/src/: main.m  main_out.txt
lab1/tex/: lab1.tex
lab2/: CMakeLists.txt  main.tex  octave-workspace
lab2/figures/: controlSys.tex
lab2/graph/: lab2ImgResults.tex  makeResults.sh
lab2/src/: analyze.m  findPoints.m  lab2.m  lab2Results.tex  lab2results.csv  lab2results.tex  main.m  makeTexFloats.sh  rawPaste  scatterColors.m  stepinfo.m
lab2/tex/: appendixA.tex  conclusion.tex  intro.tex  lab1.tex  methods.tex  results.tex
lab3/: CMakeLists.txt  main.tex  njlab.docx
lab3/img/: labBlockDiagram.tex
lab3/src/: imgResults.sty  imgResults.tex  (+1 more)
tex/: CMakeLists.txt  Makefile  README.rst
tex/data/python/: out.tex
tex/figures/: hw1Prob11.graphml
tex/hw1/: CMakeLists.txt  hw.tex  main.tex
tex/hw1/tex/: hw.tex
tex/hw2/: CMakeLists.txt
tex/hw2/tex/: hw.tex
(+21 files in other folders)
